--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.18.3",
+    "@astrojs/netlify": "^2.2.2",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.3.0",
+    "astro": "^2.3.1",
     "tailwindcss": "^3.3.1"
   }
 }
