--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.7",
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/netlify": "^2.2.2",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
+    "sharp": "^0.32.1",
     "tailwindcss": "^3.3.1"
   }
 }
