--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@astrojs/image": "^0.16.7",
     "@astrojs/mdx": "^0.18.3",
     "@astrojs/netlify": "^2.2.2",
+    "@astrojs/preact": "^2.1.0",
+    "@astrojs/renderer-preact": "^0.5.0",
     "@astrojs/rss": "^2.3.2",
     "@astrojs/sitemap": "^1.2.2",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.3.1",
+    "preact": "^10.13.2",
     "sharp": "^0.32.1",
     "tailwindcss": "^3.3.1"
   }
