--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
     "strictNullChecks": true,
-    "types": ["@astrojs/image/client"]
+    "types": [
+      "@astrojs/image/client"
+    ],
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   }
 }
